Added view server function
