# sms/object/server.go
@@ -1,11 +1,11 @@
 package object
 
 type Server struct {
-	ServerId        string `json:"server_id"`
-	ServerName      string `json:"server_name"`
-	Status          string `json:"status"`            // e.g., "active", "inactive", "maintenance"
-	Uptime          string `json:"uptime"`            // e.g., "0d 0h" for 0 days and 0 hours
-	CreatedTime     string `json:"created_time"`      // ISO 8601 format
-	LastUpdatedTime string `json:"last_updated_time"` // ISO 8601 format
-	IPV4            string `json:"ipv4"`
+	ServerId        string `xorm:"'server_id' pk"`
+	ServerName      string `xorm:"'server_name'"`
+	Status          string `xorm:"'status'"`            // e.g., "active", "inactive", "maintenance"
+	Uptime          int    `xorm:"'uptime'"`            // e.g., "3666" for 1 hour 1 minute and 6 seconds
+	CreatedTime     string `xorm:"'created_time'"`      // ISO 8601 format
+	LastUpdatedTime string `xorm:"'last_updated_time'"` // ISO 8601 format
+	IPv4            string `xorm:"'ipv4'"`
 }
